--- a/index.html
+++ b/index.html
@@ -1,32 +1,172 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pandya Shiv Mittal Kumar - Portfolio</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <style>
-    body {
-      -webkit-font-smoothing: antialiased;
-      -moz-osx-font-smoothing: grayscale;
-      font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-      margin: 0; /* Basic reset */
-    }
-  </style>
-<script type="importmap">
-{
-  "imports": {
-    "react": "https://esm.sh/react@^19.1.0",
-    "react-dom/client": "https://esm.sh/react-dom@^19.1.0/client",
-    "react-dom/": "https://esm.sh/react-dom@^19.1.0/",
-    "react/": "https://esm.sh/react@^19.1.0/"
-  }
-}
-</script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pandya Shiv - Portfolio</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Inter', sans-serif;
+            background-color: #f0f2f5; /* Light gray background */
+            color: #333;
+        }
+        .container {
+            max-width: 1200px;
+        }
+        .section-title {
+            position: relative;
+            display: inline-block;
+            padding-bottom: 8px;
+        }
+        .section-title::after {
+            content: '';
+            position: absolute;
+            left: 0;
+            bottom: 0;
+            width: 50%;
+            height: 3px;
+            background-color: #4f46e5; /* Indigo 600 */
+            border-radius: 9999px;
+        }
+    </style>
 </head>
-<body class="bg-white text-gray-800">
-  <div id="root"></div>
-  <script type="module" src="./index.tsx"></script>
+<body class="antialiased">
+    <header class="bg-white shadow-sm py-4 sticky top-0 z-50">
+        <div class="container mx-auto px-4 flex justify-between items-center">
+            <a href="#" class="text-2xl font-bold text-indigo-600 rounded-md p-2 hover:bg-indigo-50 transition duration-300">Pandya Shiv</a>
+            <nav>
+                <ul class="flex space-x-6">
+                    <li><a href="#about" class="text-gray-700 hover:text-indigo-600 font-medium transition duration-300 rounded-md p-2 hover:bg-indigo-50">About</a></li>
+                    <li><a href="#skills" class="text-gray-700 hover:text-indigo-600 font-medium transition duration-300 rounded-md p-2 hover:bg-indigo-50">Skills</a></li>
+                    <li><a href="#projects" class="text-gray-700 hover:text-indigo-600 font-medium transition duration-300 rounded-md p-2 hover:bg-indigo-50">Projects</a></li>
+                    <li><a href="#achievements" class="text-gray-700 hover:text-indigo-600 font-medium transition duration-300 rounded-md p-2 hover:bg-indigo-50">Achievements</a></li>
+                    <li><a href="#contact" class="text-gray-700 hover:text-indigo-600 font-medium transition duration-300 rounded-md p-2 hover:bg-indigo-50">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <section id="about" class="bg-gradient-to-r from-indigo-500 to-purple-600 text-white py-20 px-4 rounded-b-lg shadow-lg">
+        <div class="container mx-auto text-center">
+            <img src="https://placehold.co/150x150/667eea/ffffff?text=Shiv" alt="Profile Picture of Shiv Pandya" class="w-36 h-36 rounded-full mx-auto mb-6 border-4 border-white shadow-lg">
+            <h1 class="text-5xl font-extrabold mb-2 leading-tight">Hi, I'm <span class="text-yellow-300">Pandya Shiv </span>!</h1>
+            <p class="text-2xl font-semibold mb-4 opacity-90">Software Developer | Ethical Hacker | Tech Enthusiast</p>
+            <p class="text-xl mb-8 max-w-2xl mx-auto opacity-90">
+                I am a passionate developer from Gujarat who loves coding in Python, HTML, CSS, and Java. I have experience working on real-world projects, including building a hospital website during my internship. I enjoy ethical hacking, video editing, photography, and social media management. I have worked in teams on challenging projects and always strive to learn and grow in technology.
+            </p>
+            <a href="#projects" class="bg-white text-indigo-700 hover:bg-gray-100 font-bold py-3 px-8 rounded-full shadow-lg transition duration-300 transform hover:scale-105">View My Work</a>
+        </div>
+    </section>
+
+    <section id="skills" class="py-16 px-4">
+        <div class="container mx-auto">
+            <h2 class="text-4xl font-bold text-center mb-12 section-title mx-auto">My Skills</h2>
+            <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-8">
+                <div class="bg-white p-6 rounded-lg shadow-md hover:shadow-xl transition duration-300 transform hover:-translate-y-1 text-center">
+                    <h3 class="text-xl font-semibold text-indigo-700 mb-3">Programming Languages</h3>
+                    <p class="text-gray-600">Python, HTML, CSS, Java</p>
+                </div>
+                <div class="bg-white p-6 rounded-lg shadow-md hover:shadow-xl transition duration-300 transform hover:-translate-y-1 text-center">
+                    <h3 class="text-xl font-semibold text-indigo-700 mb-3">Cybersecurity</h3>
+                    <p class="text-gray-600">Ethical Hacking</p>
+                </div>
+                <div class="bg-white p-6 rounded-lg shadow-md hover:shadow-xl transition duration-300 transform hover:-translate-y-1 text-center">
+                    <h3 class="text-xl font-semibold text-indigo-700 mb-3">Multimedia & Marketing</h3>
+                    <p class="text-gray-600">Video Editing (Adobe Premiere Pro), Photography, Social Media Management</p>
+                </div>
+                <div class="bg-white p-6 rounded-lg shadow-md hover:shadow-xl transition duration-300 transform hover:-translate-y-1 text-center">
+                    <h3 class="text-xl font-semibold text-indigo-700 mb-3">Development & IoT</h3>
+                    <p class="text-gray-600">Game, App, and Website Development, IoT & Arduino Projects</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="projects" class="bg-gray-100 py-16 px-4">
+        <div class="container mx-auto">
+            <h2 class="text-4xl font-bold text-center mb-12 section-title mx-auto">My Projects</h2>
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+                <div class="bg-white rounded-lg shadow-md overflow-hidden hover:shadow-xl transition duration-300 transform hover:-translate-y-1">
+                    <img src="https://placehold.co/400x250/a78bfa/ffffff?text=Dharti+Putra" alt="Dharti Putra Project Thumbnail" class="w-full h-48 object-cover">
+                    <div class="p-6">
+                        <h3 class="text-2xl font-semibold text-indigo-700 mb-2">Dharti Putra</h3>
+                        <p class="text-gray-600 mb-4">A project developed for the Palanpur Hackathon that won 2nd place. It focuses on agricultural solutions using technology.</p>
+                        <div class="flex flex-wrap gap-2 mb-4">
+                            <span class="bg-indigo-100 text-indigo-800 text-xs font-medium px-2.5 py-0.5 rounded-full">Hackathon</span>
+                            <span class="bg-indigo-100 text-indigo-800 text-xs font-medium px-2.5 py-0.5 rounded-full">Agriculture</span>
+                            <span class="bg-indigo-100 text-indigo-800 text-xs font-medium px-2.5 py-0.5 rounded-full">Technology</span>
+                        </div>
+                        <a href="#" class="text-indigo-600 hover:text-indigo-800 font-semibold transition duration-300">Learn More &rarr;</a>
+                    </div>
+                </div>
+                <div class="bg-white rounded-lg shadow-md overflow-hidden hover:shadow-xl transition duration-300 transform hover:-translate-y-1">
+                    <img src="https://placehold.co/400x250/818cf8/ffffff?text=Hospital+Website" alt="Hospital Website Project Thumbnail" class="w-full h-48 object-cover">
+                    <div class="p-6">
+                        <h3 class="text-2xl font-semibold text-indigo-700 mb-2">Hospital Website</h3>
+                        <p class="text-gray-600 mb-4">Developed a professional hospital website during my internship, gaining real-world experience in web development.</p>
+                        <div class="flex flex-wrap gap-2 mb-4">
+                            <span class="bg-indigo-100 text-indigo-800 text-xs font-medium px-2.5 py-0.5 rounded-full">Web Development</span>
+                            <span class="bg-indigo-100 text-indigo-800 text-xs font-medium px-2.5 py-0.5 rounded-full">Internship Project</span>
+                        </div>
+                        <a href="#" class="text-indigo-600 hover:text-indigo-800 font-semibold transition duration-300">Learn More &rarr;</a>
+                    </div>
+                </div>
+                <div class="bg-white rounded-lg shadow-md overflow-hidden hover:shadow-xl transition duration-300 transform hover:-translate-y-1">
+                    <img src="https://placehold.co/400x250/c4b5fd/ffffff?text=Other+Projects" alt="Other Projects Thumbnail" class="w-full h-48 object-cover">
+                    <div class="p-6">
+                        <h3 class="text-2xl font-semibold text-indigo-700 mb-2">Other Projects</h3>
+                        <p class="text-gray-600 mb-4">Various other projects related to coding, app development, and ethical hacking, showcasing diverse skills and problem-solving abilities.</p>
+                        <div class="flex flex-wrap gap-2 mb-4">
+                            <span class="bg-indigo-100 text-indigo-800 text-xs font-medium px-2.5 py-0.5 rounded-full">App Development</span>
+                            <span class="bg-indigo-100 text-indigo-800 text-xs font-medium px-2.5 py-0.5 rounded-full">Ethical Hacking</span>
+                            <span class="bg-indigo-100 text-indigo-800 text-xs font-medium px-2.5 py-0.5 rounded-full">Coding</span>
+                        </div>
+                        <a href="#" class="text-indigo-600 hover:text-indigo-800 font-semibold transition duration-300">Learn More &rarr;</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="achievements" class="py-16 px-4">
+        <div class="container mx-auto">
+            <h2 class="text-4xl font-bold text-center mb-12 section-title mx-auto">My Achievements</h2>
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+                <div class="bg-white p-6 rounded-lg shadow-md hover:shadow-xl transition duration-300 transform hover:-translate-y-1">
+                    <h3 class="text-xl font-semibold text-indigo-700 mb-3">NASA Human Exploration Rover Challenge (HERC)</h3>
+                    <p class="text-gray-600">Selected for the prestigious NASA Human Exploration Rover Challenge (HERC) program. Our team was selected, though we were later disqualified due to internal issues.</p>
+                </div>
+                <div class="bg-white p-6 rounded-lg shadow-md hover:shadow-xl transition duration-300 transform hover:-translate-y-1">
+                    <h3 class="text-xl font-semibold text-indigo-700 mb-3">Palanpur Hackathon - 2nd Place</h3>
+                    <p class="text-gray-600">Secured 2nd place at the Palanpur Hackathon with our innovative project "Dharti Putra."</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="contact" class="py-16 px-4">
+        <div class="container mx-auto text-center">
+            <h2 class="text-4xl font-bold mb-12 section-title mx-auto">Get In Touch</h2>
+            <p class="text-lg text-gray-700 mb-8 max-w-xl mx-auto">
+                Have a project in mind or just want to say hello? Feel free to reach out! I'm always open to new opportunities and collaborations.
+            </p>
+            <div class="flex justify-center space-x-6 mb-8">
+                <a href="mailto:pandyashiv0867@gmail.com" class="bg-indigo-600 text-white py-3 px-6 rounded-full shadow-lg hover:bg-indigo-700 transition duration-300 transform hover:scale-105">Email Me</a>
+                <a href="https://instagram.com/pandya_shiv_" target="_blank" class="bg-pink-600 text-white py-3 px-6 rounded-full shadow-lg hover:bg-pink-700 transition duration-300 transform hover:scale-105">Instagram</a>
+                </div>
+            <p class="text-gray-500 text-sm">
+                You can also connect with me on social media.
+            </p>
+        </div>
+    </section>
+
+    <footer class="bg-gray-800 text-white py-8 px-4 rounded-t-lg shadow-inner">
+        <div class="container mx-auto text-center">
+            <p>&copy; 2025 Pandya Shiv. All rights reserved.</p>
+            <p class="text-sm mt-2">Designed with ❤️ using Tailwind CSS</p>
+        </div>
+    </footer>
 </body>
-</html><link rel="stylesheet" href="index.css">
-<script src="index.tsx" type="module"></script>
+</html>
